2010-11-26  Akira TAGOH  <tagoh@redhat.com>

	* src/ui/im-chooser-simple.c (im_chooser_simple_finalize): fix a crash
	on ccpanel.

2010-11-25  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.4.0.

	* src/im-chooser.desktop.in.in (NotShowIn): added to not display this
	for GNOME and XFCE.

	* src/ui/im-chooser-ui.c (im_chooser_ui_get): unref the IMChooserSimple
	object when the widget is being destroyed.

	* src/ccpanel/main.c (cc_imchoose_panel_init): initialize the session
	management only once to avoid getting stuck on processing
	the ICE message.

2010-11-25  Akira TAGOH  <tagoh@redhat.com>

	* src/ui/im-chooser-simple.c (_im_chooser_simple_update_im_list):
	Move none at the beginning of the list.

2010-11-15  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c: get rid of the applet support.

	* src/im-chooser.desktop.in.in (_Name): update for more convenience.

	* src/xfce4-im-chooser.desktop.in (_Name): likewise.

	* src/main.c: cleanup.
	(_dialog_response_cb): Use EggSMClient instead of GnomeClient.
	(main): get rid of libgnomeui code.

	* configure.ac: Use gtk3 if available.
	add --with-desktopfile option.

2010-10-26  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c: show none in the list as well
	and get rid of the check button. (rhbz#628420)

2010-09-08  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.3.2

	* NEWS: update

2010-08-17  Akira TAGOH  <tagoh@redhat.com>

	* src/im-chooser-simple.c (im_chooser_simple_get_widget): set a border
	around the list. (rhbz#607513)

	* src/main.c (main): make a dialog resizable.

2010-06-21  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.3.1.

	* src/main.c (main): fallback to themed icon if no icons are
	installed. (rhbz#604482)

2010-05-12  Akira TAGOH  <tagoh@redhat.com>

	* configure.ac: bump to 1.3.0.

	* data/*: Add new icons by Lapo Calamandrei and Jakub Steiner.

2010-04-20  Akira TAGOH  <tagoh@redhat.com>
